# tellama

./: .gitignore  .golangci.yml  CHANGELOG.md  Dockerfile  README.md  go.mod  go.sum  justfile  pyproject.toml
.github/workflows/: build.yml  release.yml
cmd/tellama/: main.go  tellama.go  version.go
configs/: tellama.yaml
internal/config/: config.go  config_test.go
internal/database/: database.go  database_test.go
internal/genai/: factory.go  genai.go  ollama.go  openai.go
internal/utilities/: utilities.go
tellama/: __init__.py  __main__.py  database_manager.py  tellama.py
